Adding links for people.

--- a/org/pages/people.org
+++ b/org/pages/people.org
@@ -54,33 +54,33 @@
 :CUSTOM_ID: master-students
 :END:
 
-*Pierre Guillaumont*, 2022, M2, Université de Montpellier, Statistique et Science des Données. Parcours Management de l'Information et de la Décision, /Classification des communautés d'arbres en Nouvelle-Calédonie à l'aide de modèle joint de distribution des espèces et développement du package “gecevar” pour l'obtention de variables climatiques et environnementales/, Following the internship: Developer, UMR AMAP, Montpellier, France.
+[[https://fr.linkedin.com/in/pierre-guillaumont-6a27b7230?trk=people-guest_people_search-card][*Pierre Guillaumont*]], 2022, M2, Université de Montpellier, Statistique et Science des Données. Parcours Management de l'Information et de la Décision, /Classification des communautés d'arbres en Nouvelle-Calédonie à l'aide de modèle joint de distribution des espèces et développement du package “gecevar” pour l'obtention de variables climatiques et environnementales/, Following the internship: Developer, UMR AMAP, Montpellier, France.
 
-*Corentin Knoploch*, 2019, M2, Co-supervisor: Clovis Grinand, Université Aix-Marseille, Biodiversité, Ecologie et Evolution (BEE), /The importance of deforestation and climate change in shaping lemurs' distributions and identifying their areas of climatic refuges/, Following the internship: VSC, UMR Ecofog, Kourou, Guyane française.
+[[https://guyane.ofb.fr][*Corentin Knoploch*]], 2019, M2, Co-supervisor: Clovis Grinand, Université Aix-Marseille, Biodiversité, Ecologie et Evolution (BEE), /The importance of deforestation and climate change in shaping lemurs' distributions and identifying their areas of climatic refuges/, Following the internship: VSC, Office Français de la Biodiversité, Kourou, Guyane française.
 
-*Jeanne Clément*, 2019, M2, Université de Montpellier, Mathématiques et biostatistique, /Développement d'un modèle joint de distribution des espèces pour la réalisation d'une carte de biodiversité à Madagascar/, Following the internship: PhD thesis, UMR AMAP, Montpellier, France.
+[[https://jeanneclement.github.io/][*Jeanne Clément*]], 2019, M2, Université de Montpellier, Mathématiques et biostatistique, /Développement d'un modèle joint de distribution des espèces pour la réalisation d'une carte de biodiversité à Madagascar/, Following the internship: PhD thesis, UMR AMAP, Montpellier, France.
 
-*Camille Girard-Tercieux*, 2019, M2, Co-supervisor: Raphaël Pélissier, Isabelle Maréchaux, INP-ENSAT, Université Paul Sabatier Toulouse 3, Master EA (Écosystèmes et Anthropisation), /Influence of intraspecific variability on the coexistence of tree species in a tropical forest/, Following the internship: PhD thesis, UMR AMAP, Montpellier, France.
+[[https://fr.linkedin.com/in/camille-girard-tercieux][*Camille Girard-Tercieux*]], 2019, M2, Co-supervisor: Raphaël Pélissier, Isabelle Maréchaux, INP-ENSAT, Université Paul Sabatier Toulouse 3, Master EA (Écosystèmes et Anthropisation), /Influence of intraspecific variability on the coexistence of tree species in a tropical forest/, Following the internship: PhD thesis, UMR AMAP, Montpellier, France.
 
-*Aurélien Colas*, 2018, M2, Co-supervisor: Clovis Grinand, INSA Lyon, Biosciences 4BIM, /Création d'un atlas de la biodiversité à Madagascar/, Following the internship: Developer full stack at Solutec, Lyon, France.
+[[https://fr.linkedin.com/in/aur%C3%A9lien-colas-a5878114b][*Aurélien Colas*]], 2018, M2, Co-supervisor: Clovis Grinand, INSA Lyon, Biosciences 4BIM, /Création d'un atlas de la biodiversité à Madagascar/, Following the internship: Developer full stack at Solutec, Lyon, France.
 
-*Mario M. Tagliari*, 2015, M2, Université de Montpellier, Master Écologie et Biodiversité, Biodiversité Végétale Tropicale (BVT), /Biogéographie des espèces de Baobabs à Madagascar: modélisation de l'aire de distribution des espèces et de leur vulnérabilité au changement climatique/, Following the internship: PhD thesis, Université fédérale de Santa Catarina, Florianopolis, Brésil.
+[[https://www.researchgate.net/profile/Mario-M-Tagliari][*Mario M. Tagliari*]], 2015, M2, Université de Montpellier, Master Écologie et Biodiversité, Biodiversité Végétale Tropicale (BVT), /Biogéographie des espèces de Baobabs à Madagascar: modélisation de l'aire de distribution des espèces et de leur vulnérabilité au changement climatique/, Following the internship: PhD thesis, Université fédérale de Santa Catarina, Florianopolis, Brésil.
 
-*Margaux Charra*, 2015, M2, Université Paris Sud, E.B.E. Préservation et Gestion Conservatoire des écosystèmes., /Création d'une base de données et modélisation de la biodiversité à Madagascar/, Following the internship: Data analyst, CNES, Toulouse, France.
+[[https://fr.linkedin.com/in/margaux-charra-17b245182][*Margaux Charra*]], 2015, M2, Université Paris Sud, E.B.E. Préservation et Gestion Conservatoire des écosystèmes., /Création d'une base de données et modélisation de la biodiversité à Madagascar/, Following the internship: Data analyst, CNES, Toulouse, France.
 
-*Anaïs Chalant*, 2013, M2, Co-supervisor: Grégoire Vincent, Agrocampus Ouest, Rennes, Statistique appliquée, /Intérêt des modèles hiérarchiques pour l'estimation de la démographie des espèces rares en forêt tropicale/, Following the internship: Data scientist, Air Liquide, Paris, France.
+[[https://fr.linkedin.com/in/anais-mcodrum-chalant-963b40b9/en?trk=people-guest_people_search-card][*Anaïs Chalant*]], 2013, M2, Co-supervisor: Grégoire Vincent, Agrocampus Ouest, Rennes, Statistique appliquée, /Intérêt des modèles hiérarchiques pour l'estimation de la démographie des espèces rares en forêt tropicale/, Following the internship: Data scientist, Air Liquide, Paris, France.
 
-*Nivohary Ramaroson*, 2011, M2, Université d'Antananarivo et Université de la Réunion, Télédétection et risques naturels, /Analyse historique de la déforestation par télédétection et modélisation de la déforestation à Madagascar: cas du corridor Ankeniheny-Zahamena (CAZ)/, Following the internship: Country programme analyst, IFAD, Antananarivo, Madagascar.
+[[https://mg.linkedin.com/in/ramaroson-nivohary-97b3aa68?trk=people-guest_people_search-card][*Nivohary Ramaroson*]], 2011, M2, Université d'Antananarivo et Université de la Réunion, Télédétection et risques naturels, /Analyse historique de la déforestation par télédétection et modélisation de la déforestation à Madagascar: cas du corridor Ankeniheny-Zahamena (CAZ)/, Following the internship: Country programme analyst, IFAD, Antananarivo, Madagascar.
 
-*Samuelson Andriamanohisoa*, 2010, M2, Co-supervisor: Romuald Vaudry, ESSA-forêts, Université d'Antananarivo, Ingénieur agronome, spécialisation eaux et forêts, /Développement de modèles allométriques de biomasse. Cas du site de Fandriana-Marolambo/, Following the internship: Engineer at Madacompost, Antananarivo, Madagascar.
+[[https://mg.linkedin.com/in/samuelson-andriamanohisoa-905a9934][*Samuelson Andriamanohisoa*]], 2010, M2, Co-supervisor: Romuald Vaudry, ESSA-forêts, Université d'Antananarivo, Ingénieur agronome, spécialisation eaux et forêts, /Développement de modèles allométriques de biomasse. Cas du site de Fandriana-Marolambo/, Following the internship: Engineer at Madacompost, Antananarivo, Madagascar.
 
-*Zafyson Randrianasolo*, 2010, M2, Co-supervisor: Romuald Vaudry, ESSA-forêts, Université d'Antananarivo, Ingénieur agronome, spécialisation eaux et forêts, /Développement de modèles allométriques de biomasse. Cas du site d'Ivohibe/, Following the internship: Consultant in environnement and rural development, Antananarivo, Madagascar.
+[[https://www.researchgate.net/profile/Zafyson-Randrianasolo][*Zafyson Randrianasolo*]], 2010, M2, Co-supervisor: Romuald Vaudry, ESSA-forêts, Université d'Antananarivo, Ingénieur agronome, spécialisation eaux et forêts, /Développement de modèles allométriques de biomasse. Cas du site d'Ivohibe/, Following the internship: Consultant in environnement and rural development, Antananarivo, Madagascar.
 
-*Sarobidy Rakotonarivo*, 2010, DEA, Co-supervisor: Romuald Vaudry, ESSA-forêts, Université d'Antananarivo, DEA Foresterie, Développement, Environnement, /Développement de modèles allométriques de biomasse. Cas de la région de Taolagnaro/, Following the internship: Researcher at ESSA-forêts, University of Antananarivo, Madagascar.
+[[https://mg.linkedin.com/in/sarobidy-rakotonarivo-37a5b528][*Sarobidy Rakotonarivo*]], 2010, DEA, Co-supervisor: Romuald Vaudry, ESSA-forêts, Université d'Antananarivo, DEA Foresterie, Développement, Environnement, /Développement de modèles allométriques de biomasse. Cas de la région de Taolagnaro/, Following the internship: Researcher at ESSA-forêts, University of Antananarivo, Madagascar.
 
-*Hasina Razafindrabe*, 2010, M2, Co-supervisor: Romuald Vaudry, ESSA-forêts, Université d'Antananarivo, Ingénieur agronome, spécialisation eaux et forêts, /Développement de modèles allométriques de biomasse. Cas du site de Bealanana/, Following the internship: Engineer at Nalco Water, Antananarivo, Madagascar.
+[[https://mg.linkedin.com/in/hasina-razafindrabe-0b8b3b35][*Hasina Razafindrabe*]], 2010, M2, Co-supervisor: Romuald Vaudry, ESSA-forêts, Université d'Antananarivo, Ingénieur agronome, spécialisation eaux et forêts, /Développement de modèles allométriques de biomasse. Cas du site de Bealanana/, Following the internship: Engineer at Nalco Water, Antananarivo, Madagascar.
 
-*Cindy Gidoin*, 2010, M2, Co-supervisor: Sylvie Gourlet-Fleury, Université Montpellier 2 Sciences et techniques, Fonctionnement des écosystèmes aquatiques et terrestres, naturels et anthropisés, /Effets de la composition spécifique, de l'intensité des perturbations et des conditions environnementales sur l'accroissement en biomasse aérienne en forêt tropicale humide/, Following the internship: Post-doctoral researcher, University of Zurich, Switzerland.
+[[https://www.researchgate.net/profile/Cindy-Gidoin][*Cindy Gidoin*]], 2010, M2, Co-supervisor: Sylvie Gourlet-Fleury, Université Montpellier 2 Sciences et techniques, Fonctionnement des écosystèmes aquatiques et terrestres, naturels et anthropisés, /Effets de la composition spécifique, de l'intensité des perturbations et des conditions environnementales sur l'accroissement en biomasse aérienne en forêt tropicale humide/, Following the internship: Post-doctoral researcher, University of Zurich, Switzerland.
 
 ** Collaborators
 :PROPERTIES:
