Adding link to CV on index page.

--- a/org/pages/people.org
+++ b/org/pages/people.org
@@ -15,7 +15,7 @@
 :CUSTOM_ID: principal-investigator
 :END:
 
-[[file:ghislainv.org][*Ghislain Vieilledent*]], Cirad UMR AMAP, research scientist, /tropical forest ecology/.
+[[file:ghislainv.html][*Ghislain Vieilledent*]], Cirad UMR AMAP, research scientist, /tropical forest ecology/.
 
 ** Post-docs
 :PROPERTIES:
