--- a/org/blog/news.org
+++ b/org/blog/news.org
@@ -13,7 +13,7 @@
 :END:
 
 *Mar. 31, 2023*\\
-Philippe Birnbaum and Thomas Ibanez from UMR AMAP have compiled an impressive data-set of 169,376 tree occurrences in New Caledonia. Trees from this data-set belong to 1176 species, 93 families, and 285 genera. Occurrences were retrieved from the New Caledonian Plant Inventory and Permanent Plot Network ([[https://niamoto.nc/peuplement/][NC-PIPPN]]), the Herbarium of New Caledonia database ([[http://publish.plantnet-project.org/project/nou][NOU]]), [[https://www.gbif.org][GBIF]], and other additional datasets. Among these species, 303 species (28%) were found preferentially (>90% of their occurrences) on ultramafic soils, and 62 species were found exclusively on this type of soils. Ultramafic soils, which cover 33% of New Caledonia, exhibit low concentration of nutrients (N, P, and K), and high concentration of magnesium (Mg) causing calcium (Ca) deficiency (low Ca/Mg ratio) or Mg toxicity. They also often exhibit high concentration of potentially phytotoxic elements such as nickel (Ni), manganese (Mn), or chromium (Cr), and are generally low in water-holding capacity. Evolution have thus selected tree species with unique adaptative strategies to grow and survive in this constrained environment. According to the results of the article, 91% of the tree species found on ultramafic soils are endemic to New Caledonia. Interestingly, tree communities on ultramafic soils in New Caledonia were found to be different depending on the location of the ultramafic areas, suggesting that other environmental factors than soil filter species and determine species assemblage. Tree species found preferentially on ultramafic soils are potentially threatened by mining activities, for the extraction of nickel in particular. In the article, authors underline the fact that the protected area network should be extended to cover more of the ultramafic areas in New Caledonia.
+Philippe Birnbaum and Thomas Ibanez from UMR AMAP have compiled an impressive dataset of 169,376 tree occurrences in New Caledonia. The trees in this dataset belong to 1176 species, 93 families, and 285 genera. Occurrences were retrieved from the New Caledonian Plant Inventory and Permanent Plot Network ([[https://niamoto.nc/peuplement/][NC-PIPPN]]), the Herbarium of New Caledonia database ([[http://publish.plantnet-project.org/project/nou][NOU]]), [[https://www.gbif.org][GBIF]], and other additional datasets. Among these species, 303 species (28%) were found preferentially (> 90% of their occurrences) on ultramafic soils, and 62 species were found exclusively on this soil type. Ultramafic soils, which cover 33% of New Caledonia, have low nutrient concentrations (N, P, and K) and high magnesium concentrations (Mg) leading to calcium (Ca) deficiency (low Ca/Mg ratio) or Mg toxicity. They also often have high concentrations of potentially phytotoxic elements such as nickel (Ni), manganese (Mn), or chromium (Cr), and generally have low water-holding capacity. Evolution has therefore selected tree species with unique adaptative strategies to grow and survive in this constrained environment. According to the results of the article, 91% of the tree species found on ultramafic soils are endemic to New Caledonia. Interestingly, tree communities on ultramafic soils in New Caledonia were found to vary depending on the location of ultramafic areas, suggesting that environmental factors other than soil filter species and determine species composition. Tree species that prefer ultramafic soils are potentially threatened by mining activities, particularly nickel mining. In the article, the authors emphasize that the protected area network should be expanded to cover more ultramafic areas in New Caledonia.
 
 #+attr_html: :style display:block;margin:auto;max-width:80%;
 #+caption: *Classification of the 22 ultramafic areas in New Caledonia based on their floristic dissimilarities.*
